fix(input): placeholder and datepicker value displayed overlapping
css to hide the value doesn't work on Firefox and IE11
this is due to combining webkit pseudo selectors with the general rule

Fixes #10440

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -148,7 +148,9 @@ md-input-container {
     opacity: 0;
   }
 
-  &:not( .md-input-has-value ) input:not( :focus ),
+  &:not( .md-input-has-value ) input:not( :focus ) {
+    color: transparent;
+  }
   &:not( .md-input-has-value ) input:not( :focus )::-webkit-datetime-edit-ampm-field,
   &:not( .md-input-has-value ) input:not( :focus )::-webkit-datetime-edit-day-field,
   &:not( .md-input-has-value ) input:not( :focus )::-webkit-datetime-edit-hour-field,
